@@ -1,3 +1,6 @@
+2021-09-28 Markus Gans  <guru.mail@muenster.de>
+	* Optimization of attribute comparisons
+
 2021-09-25 Markus Gans  <guru.mail@muenster.de>
 	* New FString auxiliary function FStringCaseCompare as strcasecmp 
 	  replacement
